# lychee-declarative

./: CMakeLists.txt  README.md
.github/workflows/: archlinux-build.yaml  cmake.yml  debian-build.yaml
doc/: Doxyfile.in
examples/: CMakeLists.txt
examples/controlexample/: CMakeLists.txt  Main.qml
examples/dockexample/: CMakeLists.txt  Main.qml
examples/launcherexample/: CMakeLists.txt  Main.qml
src/: CMakeLists.txt  declarativeglobal.cpp  declarativeglobal.h  dualkawasebluritem.cpp  dualkawasebluritem.h  dualkawasebluritem_p.h  themeimageitem.cpp  themeimageitem.h  themeimageitem_p.h
src/qml/: SearchBox.qml  Switch.qml
